# pybandit-archive

./: .gitignore  LICENSE  README.md  demo.ipynb  pyproject.toml
notebooks/algo/: 01-epsilon-greedy.ipynb
notebooks/algos/: 01-epsilon-greedy.ipynb
notebooks/demo/: Untitled.ipynb  demo-epsilon-greedy.ipynb
pybandit/: __init__.py  epsilon_bandit.py
tests/: test_pybandit.py
