[tool.poetry]
name = "pybandit"
version = "0.0.1"
description = "Imlementation of Multiarmed Bandit Algorithms"
authors = ["Tuhin Sharma <tuhinsharma121@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "1.18.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
